<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stone"
    tools:context=".menu.fragment_home">

    <LinearLayout
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:src="@drawable/myfoto_transparan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_saya"
            android:textAlignment="center"
            style="@style/nama_saya"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motivasi"
            android:textAlignment="center"
            style="@style/motivasi"
            android:layout_marginTop="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="23dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile"
                android:layout_width="100dp"
                android:layout_height="57dp"
                android:drawableTop="@drawable/ic_baseline_person_24"
                android:paddingTop="10dp"
                android:text="@string/menu_profile"
                style="@style/profile_btn"
                android:gravity="center"
                android:onClick="deskripsi"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hobi"
                android:layout_width="100dp"
                android:layout_height="57dp"
                android:drawableTop="@drawable/ic_baseline_sports_esports_24"
                android:paddingTop="10dp"
                android:text="@string/interest"
                style="@style/profile_btn"
                android:gravity="center"
                android:layout_marginLeft="50dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <FrameLayout
                android:id="@+id/page_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@color/mist"/>
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>