<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stone">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/stone"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle_border"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/pukno" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/nama_saya"
            android:textColor="@color/white"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/dec1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/dec_home"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dec2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dec1"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/dec_home2"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>


</RelativeLayout>